force-app/main/default/objects/CWS_CalloutSettling__mdt/CWS_CalloutSettling__mdt.object-meta.xml
<CustomObject>
    <description>Callout information to be used for making integration callout</description>
    <label>Callout Settling</label>
    <pluralLabel>Callout Settlings</pluralLabel>
</CustomObject>