force-app/main/default/objects/CWS_CalloutSettling__mdt/fields/CWS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>CWS_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the callout should be skipped</description>
    <inlineHelpText>Denotes if the callout should be skipped</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>