force-app/main/default/objects/CWS_CalloutSettling__mdt/fields/CWS_Method__c.field-meta.xml
<CustomField>
    <fullName>CWS_Method__c</fullName>
    <description>HTTP Method name</description>
    <inlineHelpText>HTTP Method name</inlineHelpText>
    <label>Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>