force-app/main/default/objects/CWS_CalloutSettling__mdt/fields/CWS_NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>CWS_NamedCredential__c</fullName>
    <description>API name of the named Credential</description>
    <inlineHelpText>API name of the named Credential</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>